tests/NormalTests/paczka1/fuzzy1/91953274.err
Error in line 2: UgSJiNNL S452 7,9
Error in line 13: 2EMfUfj S452 11,8
Error in line 14: jf1JX0H S452 83,0
Error in line 15: 2EMfUfj A573 43,1
Error in line 23: 8bexEa A255 31,4
Error in line 20: bdmsQMtoc A255 62,6
